--- a/cm/release/CF/AmazonLinux-AnsibleEc2Instance.template
+++ b/cm/release/CF/AmazonLinux-AnsibleEc2Instance.template
@@ -2,30 +2,149 @@
 	"AWSTemplateFormatVersion" : "2010-09-09",
 	"Description" : "Rean AWS Ansible Wordpress Sample - Ansible install on default Amazon Linux base image",
 	"Resources" : {
-		"AnsibleVPC" : {
+		"AnsibleVPC2" : {
 			"Type" : "AWS::EC2::VPC",
 			"Description" : "Isolated VPC for Ansible + Wordpress",
 			"Properties": {
 				"EnableDnsSupport": true,
 				"EnableDnsHostnames": true,
 				"InstanceTenancy": "default",
-				"CidrBlock" : "10.0.0.0/24"
+				"CidrBlock" : { "Ref" : "PrivateNetworkCidr" }
 			}
 		},
-		"AnsibleSubnet" : {
+		"AnsibleSubnet2" : {
 			"Type" : "AWS::EC2::Subnet",
 			"Properties" : {
-				"AvailabilityZone" : "us-east-1b",
-				"CidrBlock" : { "Fn::GetAtt" : [ "AnsibleVPC", "CidrBlock" ]},
+				"AvailabilityZone" : { "Ref" : "AvailabilityZone" },
+				"CidrBlock" : { "Ref" : "PublicNetworkCidr" },
 				"MapPublicIpOnLaunch" : true,
-				"VpcId" : { "Ref" : "AnsibleVPC" }
+				"VpcId" : { "Ref" : "AnsibleVPC2" }
 			}
 		},
-		"AnsibleSecurityGroup" : {
+		"InternetGateway" : {
+			"Type" : "AWS::EC2::InternetGateway",
+				"Properties" : {
+				"Tags" : [
+					{ "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
+					{ "Key" : "Network", "Value" : "Public" }
+				]
+			}
+		},
+		"GatewayToInternet" : {
+			"Type" : "AWS::EC2::VPCGatewayAttachment",
+			"Properties" : {
+				"VpcId" : { "Ref" : "AnsibleVPC2" },
+				"InternetGatewayId" : { "Ref" : "InternetGateway" }
+			}
+		},
+		"PublicRouteTable" : {
+			"Type" : "AWS::EC2::RouteTable",
+			"Properties" : {
+				"VpcId" : { "Ref" : "AnsibleVPC2" },
+				"Tags" : [
+					{ "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
+					{ "Key" : "Network", "Value" : "Public" }
+				]
+			}
+		},
+		"PublicRoute" : {
+			"Type" : "AWS::EC2::Route",
+			"DependsOn" : "GatewayToInternet",
+			"Properties" : {
+				"RouteTableId" : { "Ref" : "PublicRouteTable" },
+				"DestinationCidrBlock" : "0.0.0.0/0",
+				"GatewayId" : { "Ref" : "InternetGateway" }
+			}
+		},
+		"PublicSubnetRouteTableAssociation" : {
+			"Type" : "AWS::EC2::SubnetRouteTableAssociation",
+			"Properties" : {
+				"SubnetId" : { "Ref" : "AnsibleSubnet2" },
+				"RouteTableId" : { "Ref" : "PublicRouteTable" }
+			}
+		},
+		"PublicNetworkAcl" : {
+			"Type" : "AWS::EC2::NetworkAcl",
+			"Properties" : {
+				"VpcId" : { "Ref" : "AnsibleVPC2" },
+				"Tags" : [
+					{ "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
+					{ "Key" : "Network", "Value" : "Public" }
+				]
+			}
+		},
+		"InboundHTTPPublicNetworkAclEntry" : {
+			"Type" : "AWS::EC2::NetworkAclEntry",
+			"Properties" : {
+				"NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
+				"RuleNumber" : "100",
+				"Protocol" : "6",
+				"RuleAction" : "allow",
+				"Egress" : "false",
+				"CidrBlock" : "0.0.0.0/0",
+				"PortRange" : { "From" : "80", "To" : "80" }
+			}
+		},
+		"InboundHTTPSPublicNetworkAclEntry" : {
+			"Type" : "AWS::EC2::NetworkAclEntry",
+			"Properties" : {
+				"NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
+				"RuleNumber" : "101",
+				"Protocol" : "6",
+				"RuleAction" : "allow",
+				"Egress" : "false",
+				"CidrBlock" : "0.0.0.0/0",
+				"PortRange" : { "From" : "443", "To" : "443" }
+			}
+		},
+		"InboundSSHPublicNetworkAclEntry" : {
+			"Type" : "AWS::EC2::NetworkAclEntry",
+			"Properties" : {
+				"NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
+				"RuleNumber" : "102",
+				"Protocol" : "6",
+				"RuleAction" : "allow",
+				"Egress" : "false",
+				"CidrBlock" : "0.0.0.0/0",
+				"PortRange" : { "From" : "22", "To" : "22" }
+			}
+		},
+		"InboundEphemeralPublicNetworkAclEntry" : {
+			"Type" : "AWS::EC2::NetworkAclEntry",
+			"Properties" : {
+				"NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
+				"RuleNumber" : "103",
+				"Protocol" : "6",
+				"RuleAction" : "allow",
+				"Egress" : "false",
+				"CidrBlock" : "0.0.0.0/0",
+				"PortRange" : { "From" : "1024", "To" : "65535" }
+			}
+		},
+		"OutboundPublicNetworkAclEntry" : {
+			"Type" : "AWS::EC2::NetworkAclEntry",
+			"Properties" : {
+				"NetworkAclId" : { "Ref" : "PublicNetworkAcl" },
+				"RuleNumber" : "100",
+				"Protocol" : "6",
+				"RuleAction" : "allow",
+				"Egress" : "true",
+				"CidrBlock" : "0.0.0.0/0",
+				"PortRange" : { "From" : "0", "To" : "65535" }
+			}
+		},
+		"PublicSubnetNetworkAclAssociation" : {
+			"Type" : "AWS::EC2::SubnetNetworkAclAssociation",
+			"Properties" : {
+				"SubnetId" : { "Ref" : "AnsibleSubnet2" },
+				"NetworkAclId" : { "Ref" : "PublicNetworkAcl" }
+			}
+		},
+		"AnsibleSecurityGroup2" : {
 			"Type" : "AWS::EC2::SecurityGroup",
 			"Properties" : {
 				"GroupDescription" : "Enable SSH and HTTPS (tower)",
-				"VpcId" : { "Ref" : "AnsibleVPC" },
+				"VpcId" : { "Ref" : "AnsibleVPC2" },
 				"SecurityGroupIngress" : [ {
 					"IpProtocol" : "tcp",
 					"FromPort" : "22",
@@ -42,13 +161,19 @@
 		"AnsibleServer" : {
 			"Type" : "AWS::EC2::Instance",
 			"Description" : "Amazon Linux base image plus user data to install ansible and git",
+			"DependsOn" : "GatewayToInternet",
 			"Properties" : {
 				"ImageId" : "ami-5fb8c835",
-				"AvailabilityZone" : { "Fn::GetAtt" : [ "AnsibleSubnet", "AvailabilityZone" ] },
-				"InstanceType" : "t1.micro",
+				"AvailabilityZone" : { "Fn::GetAtt" : [ "AnsibleSubnet2", "AvailabilityZone" ] },
+				"InstanceType" : { "Ref" : "InstanceType" },
 				"KeyName" : { "Ref" : "KeyPair" },
-				"SecurityGroupIds" : [ { "Ref" : "AnsibleSecurityGroup" } ],
-				"SubnetId" : { "Ref" : "AnsibleSubnet" },
+				"NetworkInterfaces" : [{
+					"GroupSet"                 : [{ "Ref" : "AnsibleSecurityGroup2" }],
+					"AssociatePublicIpAddress" : "true",
+					"DeviceIndex"              : "0",
+					"DeleteOnTermination"      : "true",
+					"SubnetId"                 : { "Ref" : "AnsibleSubnet2" }
+				}],
 				"UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
 					"#!/bin/bash -xe\n",
 					"yum update -y\n",
@@ -60,6 +185,27 @@
 		}
 	},
 	"Parameters" : {
+		"PublicNetworkCidr" : {
+			"Type" : "String",
+			"Default" : "10.0.0.0/24"
+		},
+		"PrivateNetworkCidr" : {
+			"Type" : "String",
+			"Default" : "10.0.1.0/16"
+		},
+		"AvailabilityZone" : {
+			"Type" : "String",
+			"Description" : "Resource Location",
+			"Default" : "us-east-1b",
+			"AllowedPattern" : "[a-z]{2}-[a-z]{2,5}-[0-9]{1}[a-z]{1}",
+			"ConstraintDescription" : "Specify a valid zone (e.g. us-east-1b)"
+		},
+		"InstanceType" : {
+			"Type" : "String",
+			"Default" : "t1.micro",
+			"AllowedPattern" : "[a-z]{1}[1-3]{1}.[a-z]{3,}",
+			"ConstraintDescription" : "Specify a valid instance type (e.g. t1.micro)"
+		},
 		"KeyPair" : {
 			"Type" : "AWS::EC2::KeyPair::KeyName",
 			"Description" : "Amazon EC2 Key Pair"
